--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
 		 </p>
 		 <br>
 		<p>
+			To See Count_up_down page click here < a href="Count_up_down.html">Count</a>
+			<br>
 			To know more about my intersets click here <a href="second.html"> Intersets</a>
 		</p>
 			
