--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		    </tr>
 		    <tr>
 				<th>Email :</th>
-				<td>vashusingh469@.com</td>
+				<td>vashusingh469@gmail.com</td>
 		    </tr>
 		</table>
 			<br>
@@ -44,8 +44,7 @@
 		 </p>
 		 <br>
 		<p>
-			To See Count_up_down page click here < a href="Count_up_down.html">Count</a>
-			<br>
+			To See Count_up_down page click here <a href="Count_up_down.html">Count</a>
 			To know more about my intersets click here <a href="second.html"> Intersets</a>
 		</p>
 			
