--- a/index.html
+++ b/index.html
@@ -47,6 +47,10 @@
 			<br>
 			To See Scientific Calculator page click here <a href="Calculator.html">Calculator</a>
 			<br>
+			To see weather app click here <a href="weather.html">Weather</a>
+		        <br>
+			To see fetch_data project click here <a href="Fetch_data.html">Fetch_data</a>
+			<br>
 			To know more about my intersets click here <a href="second.html"> Intersets</a>
 		</p>
 			
